# Sentinel-MCP-Server

./: .gitignore  README.md  pyproject.toml  scan_project.py
src/sentinel/: server.py
src/sentinel/core/: config.py  exceptions.py  logger.py
src/sentinel/services/: code_context.py  compliance.py  eol.py  scanner.py  threat_modeling.py
src/sentinel/tools/: docker_runner.py
tests/: test_advanced_tools.py  test_code_context.py  test_crypto.py  test_docker_runner.py  test_eol.py  test_integration_scenarios.py
tests/resources/: openapi.json  requirements.txt  vulnerable.py  vulnerable.tf
