[project]
name = "sentinel-mcp-server"
version = "0.1.0"
description = "Robust, Enterprise-Grade Security MCP Server"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=0.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "python-json-logger>=2.0.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]
